--- a/text/methods.tex
+++ b/text/methods.tex
@@ -420,7 +420,7 @@ Therefore geometry optimisation can be employed such that only the atoms in the 
 Typically this would extend to all atoms within five coordination shells of those directly involved in the switch move \cite{Mousseau2001}.
 
 \section{Hard Particle \mc}
-\ref{s:hardparticlemc}
+\label{s:hardparticlemc}
 
 Hard particle Monte Carlo is one of the most well\--established computational methods in statistical physics.
 Through its simplicity it is able to provide insight into the fundamental behaviour of particle systems and simulations of increasing size are still performed this century \cite{Isobe2016,Bernard2009,Anderson2013,Isobe2015}.
