--- a/text/theory.tex
+++ b/text/theory.tex
@@ -378,9 +378,7 @@ The law is well used for example in studies of materials, emulsions, biological 
 As an example of the calculation of the \aw{} parameter, the plots of the fits for the systems in figure \ref{fig:zach} are presented in figure \ref{fig:awdemo}, along with the corresponding $\alpha$ parameters.
 This demonstrates two contrasting aspects of the \aw{} law. 
 Firstly the law holds very well, especially given the fact that these samples consist of just twenty rings each.
-However, it also demonstrates that the law is by no means exact and that some greyness
-\marknote{uncertainty?} is inevitably introduced during the linear regression.
-\marknote{Do you discuss this problem elsewhere? If not, perhaps make more of it here?}
+However, it also demonstrates that the law is by no means exact and that some greyness is inevitably introduced during the linear regression.
 
 \section{Persistent Homology?}
 
