--- a/thesis.tex
+++ b/thesis.tex
@@ -203,20 +203,20 @@
 %%%%% CHAPTERS
 % Add or remove any chapters you'd like here, by file name (excluding '.tex'):
 \flushbottom
-\include{text/introduction}
-\include{text/theory}
-\include{text/methods}
-\include{text/bilayers}
-\include{text/targeted_opt}
-\include{text/general_networks}
-
+%\include{text/introduction}
+%\include{text/theory}
+%\include{text/methods}
+%\include{text/bilayers}
+%\include{text/targeted_opt}
+%\include{text/general_networks}
+\include{text/procrystals}
 
 %% APPENDICES %% 
 % Starts lettered appendices, adds a heading in table of contents, and adds a
 %    page that just says "Appendices" to signal the end of your main text.
 \startappendices
 % Add or remove any appendices you'd like here:
-`\include{appendices/forces}
+%\include{appendices/forces}
 
 
 %%%%% REFERENCES
